z-index fixation

--- a/src/layout/components/header/style.scss
+++ b/src/layout/components/header/style.scss
@@ -8,7 +8,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 9999;
 
   @media (max-width: 991px) {
     height: 70px;
